# ai_trading

./: AGENTS.md  CLAUDE.md  ENVIRONMENT.md  ENVIRONMENT_zh.md  HANDOFF_codex_opennof1_wquguru.md  LOCAL_RUNBOOK.md  README.md  ROADMAP.md  STRATEGY_V2_CONFIG_GUIDE.md  opennof1_directory_map.html  quickstart.md  quickstart_zh.md  research.md  多阶段执行任务清单_第3版策略.md
backend/: .env.example  README.md  analyze_position_closures.py  detailed_closure_analysis.py  main.py  profit_loss_analysis.py  pyproject.toml  requirements.txt  test_api.sh
backend/agent/: scheduler.py  state.py  workflow.py
backend/api/: main.py  routes.py
backend/config/: CONFIG_CLEANUP.md  agent.yaml  agent_config.py  regime_classifier_prompt.md  settings.py  strategy_contract.yaml  trading_strategy.md
backend/database/: models.py
backend/market/: api_client.py  data_cache.py  derivatives_cache.py  hyperliquid_market.py  market_data_client.py  types.py  websocket_client.py
backend/scripts/: README.md  debug_positions.py  hyperliquid_acceptance.py  p0_acceptance.py  test_futures_trading.py  test_natr.py  test_position_matching.py
backend/services/: prompt_service.py  strategy_contract.py
backend/tests/: test_analysis_response.py  test_analysis_tools.py  test_exchange_config.py  test_execution_symbols.py  test_hyperliquid_acceptance.py  test_hyperliquid_market.py  test_hyperliquid_trader.py  test_kline_cache.py  test_market_data_client.py  test_p0_acceptance.py  test_position_plan_sync.py  test_profit_protection.py  test_quant_guardrails.py  test_regime_execution.py  test_risk_guard.py  (+8 more)
(+66 files in other folders)
