[project]
name = "alpha-transformer"
version = "1.0.0"
description = "AI加密货币自动交易系统"
authors = [
    {name = "AlphaTransformer Team", email = "team@alphatransformer.ai"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "openai>=1.0.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0", # For async SQLite operations
    "python-dotenv>=1.0.0",
    "TA-Lib>=0.6.8", # Technical analysis library (case sensitive)
    "numpy>=1.24.0",
    "ccxt==4.5.58", # Verified Hyperliquid testnet market loading
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "ruff>=0.1.6",
    "black>=23.0.0",
]

[project.scripts]
alpha-transformer-api = "api.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "market", "api", "utils"]
